# simplyeasy

./: DTLC.cabal
app/: Checker.hs  Data.hs  Eval.hs  Main.hs
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
